// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouterHelpers should apply a simple pathJoin helper: double forward slash 1`] = `"//hello/world/lorem/ipsum/dolor"`;

exports[`RouterHelpers should apply a simple pathJoin helper: forward slashes everywhere 1`] = `"//hello/world/lorem/ipsum/dolor"`;

exports[`RouterHelpers should apply a simple pathJoin helper: single forward slash 1`] = `"/hello/world/lorem/ipsum/dolor/"`;

exports[`RouterHelpers should apply a simple pathJoin helper: triple forward slash 1`] = `"//hello/world/lorem/ipsum/dolor"`;

exports[`RouterHelpers should handle location search and hash passthrough values: NO search and hash 1`] = `
Object {
  "routeHref": "/rhel",
}
`;

exports[`RouterHelpers should handle location search and hash passthrough values: hash 1`] = `
Object {
  "routeHref": "/rhel#lorem",
}
`;

exports[`RouterHelpers should handle location search and hash passthrough values: search 1`] = `
Object {
  "routeHref": "/rhel?dolor=sit",
}
`;

exports[`RouterHelpers should handle location search and hash passthrough values: search and hash 1`] = `
Object {
  "routeHref": "/rhel?dolor=sit#lorem",
}
`;

exports[`RouterHelpers should return a generated baseName using NO path prefix: app lorem route name 1`] = `"/appName"`;

exports[`RouterHelpers should return a generated baseName using NO path prefix: empty pathPrefix: app base name 1`] = `"/appName"`;

exports[`RouterHelpers should return a generated baseName using a beta path prefix: beta app base name 1`] = `"/beta/appName"`;

exports[`RouterHelpers should return a generated baseName using a beta path prefix: beta app lorem route name 1`] = `"/beta/appName"`;

exports[`RouterHelpers should return a generated baseName using an insights path prefix: insights, app base name 1`] = `"/insights/appName"`;

exports[`RouterHelpers should return a generated baseName using an insights path prefix: insights, app lorem route name 1`] = `"/insights/appName"`;

exports[`RouterHelpers should return a generated baseName using an insights path prefix: insights, beta app base name 1`] = `"/beta/insights/appName"`;

exports[`RouterHelpers should return a generated baseName using an insights path prefix: insights, beta app lorem route name 1`] = `"/beta/insights/appName"`;

exports[`RouterHelpers should return a generated basePath: insights, app base path 1`] = `"/insights/"`;

exports[`RouterHelpers should return a generated basePath: insights, app lorem route name base path 1`] = `"/insights/"`;

exports[`RouterHelpers should return a generated basePath: insights, beta app base path 1`] = `"/beta/insights/"`;

exports[`RouterHelpers should return a generated basePath: insights, beta app lorem route name base path 1`] = `"/beta/insights/"`;

exports[`RouterHelpers should return an error route: error route 1`] = `
Object {
  "activateOnError": true,
  "component": "optinView/optinView",
  "disabled": false,
  "exact": true,
  "id": "optin",
  "path": "/optin",
  "redirect": null,
}
`;

exports[`RouterHelpers should return default navigation and route details: detail: defaults 1`] = `
Object {
  "configs": Array [],
  "configsById": Object {},
  "firstMatch": undefined,
}
`;

exports[`RouterHelpers should return navigation and route details from a path: detail: match specific path 1`] = `
Object {
  "id": "rhel",
}
`;

exports[`RouterHelpers should return navigation and route details from a path: detail: missing parameters 1`] = `
Object {
  "id": undefined,
}
`;

exports[`RouterHelpers should return navigation and route details from a path: detail: missing pathName 1`] = `
Object {
  "id": undefined,
}
`;

exports[`RouterHelpers should return navigation and route details from a path: detail: specific product path 1`] = `
Object {
  "id": "rhel-arm",
}
`;

exports[`RouterHelpers should return navigation and route details from a related name: detail: match related name 1`] = `
Object {
  "id": "rhel-arm",
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: match specific path navigation 1`] = `
Object {
  "id": "rhel",
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: missing ID, specific path 1`] = `
Object {
  "id": "rhel",
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: missing id and pathName and default 1`] = `
Object {
  "id": undefined,
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: missing id and pathName, default 1`] = `
Object {
  "id": "missing",
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: missing parameters 1`] = `
Object {
  "id": undefined,
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: specific navigation ID 1`] = `
Object {
  "id": "rhel-arm",
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: specific route ID 1`] = `
Object {
  "id": "optin",
}
`;

exports[`RouterHelpers should return specific properties: routerHelpers 1`] = `
Object {
  "appName": "subscriptions",
  "baseName": "/",
  "basePath": "/",
  "dynamicBaseName": [Function],
  "dynamicBasePath": [Function],
  "generateProductGroups": [Function],
  "generateRoutes": [Function],
  "getErrorRoute": Object {
    "activateOnError": true,
    "component": "optinView/optinView",
    "disabled": false,
    "exact": true,
    "id": "optin",
    "path": "/optin",
    "redirect": null,
  },
  "getRouteConfig": [Function],
  "getRouteConfigByPath": [Function],
  "importView": [Function],
  "pathJoin": [Function],
  "platformLandingRedirect": "/",
  "platformModalRedirect": "/?not_entitled=subscriptions",
  "productGroups": Object {
    "viewOpenShift Container Platform": Array [
      "OpenShift Container Platform",
    ],
    "viewOpenShift-dedicated-metrics": Array [
      "OpenShift-dedicated-metrics",
    ],
    "viewOpenShift-metrics": Array [
      "OpenShift-metrics",
    ],
    "viewRHEL": Array [
      "RHEL",
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
    ],
    "viewSatellite": Array [
      "Satellite",
      "Satellite Capsule",
      "Satellite Server",
    ],
    "viewrhosak": Array [
      "rhosak",
    ],
  },
  "routes": Array [
    Object {
      "activateOnError": false,
      "component": "productView/productView",
      "disabled": false,
      "exact": true,
      "id": "rhel",
      "path": "/rhel",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productView",
      "disabled": false,
      "exact": true,
      "id": "rhel-arm",
      "path": "/rhel-arm",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productView",
      "disabled": false,
      "exact": true,
      "id": "rhel-ibmpower",
      "path": "/rhel-ibmpower",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productView",
      "disabled": false,
      "exact": true,
      "id": "rhel-ibmz",
      "path": "/rhel-ibmz",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productView",
      "disabled": false,
      "exact": true,
      "id": "rhel-x86",
      "path": "/rhel-x86",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productViewOpenShiftContainer",
      "disabled": false,
      "exact": true,
      "id": "openshift-container",
      "path": "/openshift-container",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productViewOpenShiftDedicated",
      "disabled": false,
      "exact": true,
      "id": "openshift-dedicated",
      "path": "/openshift-dedicated",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productView",
      "disabled": false,
      "exact": true,
      "id": "rhosak",
      "path": "/streams",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productView",
      "disabled": false,
      "exact": true,
      "id": "satellite",
      "path": "/satellite",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productView",
      "disabled": false,
      "exact": true,
      "id": "satellite-capsule",
      "path": "/satellite-capsule",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productView",
      "disabled": false,
      "exact": true,
      "id": "satellite-server",
      "path": "/satellite-server",
      "redirect": null,
    },
    Object {
      "activateOnError": true,
      "component": "optinView/optinView",
      "disabled": false,
      "exact": true,
      "id": "optin",
      "path": "/optin",
      "redirect": null,
    },
    Object {
      "activateOnError": false,
      "component": "productView/productViewMissing",
      "disabled": false,
      "exact": true,
      "id": "missing",
      "path": "/",
      "redirect": "/",
    },
  ],
}
`;
